[B]1.0.7[/B]
- fixed MPAA scraping from IMDb
- changed: switch to chaining IMDb scraper library functions
- use akas.imdb.com instead of www.imdb.com for NfoUrl lookups (so that
  the behaviour is the same as with title search lookups)

[B]1.0.6[/B]
- replace dtrailer.com with HD-Trailers.net for trailer scraping
- fixed dupe &amp; in settings strings

[B]1.0.5[/B]
- return numeric runtime/duration values round 2

[B]1.0.4[/B]

- return numeric runtime/duration values
- removed fanart.jpg

[B]1.0.1-3[/B]

- internal tests

[B]1.0.0[/B]

- Initial import into addons repository