@@ -9,5 +9,6 @@
     <string id="30005">Enable IMDb trailers</string>
     <string id="30006">Enable trailers from HD-Trailers.net</string>
     <string id="30007">IMDb Poster &amp; Actor Thumb(s) Size</string>
-</strings>
+	<string id="30008">Preferred Title Language from</string>
+	</strings>
 
