@@ -9,5 +9,6 @@
     <string id="30005">IMDb filmelőzetes engedélyezése</string>
     <string id="30006">Filmelőzetes engedélyezése a HD-Trailers.net-ről</string>
     <string id="30007">IMDb poszter &amp; színész bélyegképek mérete</string>
-</strings>
+	<string id="30008">Filmcím a következő országból:</string>
+	</strings>
 
